--- a/Content/Site.css
+++ b/Content/Site.css
@@ -267,13 +267,26 @@ a:hover{
     margin-top: 0;
     margin-bottom: 30px;
     position:relative;display:inline-block;
-    font-size:2.4em;font-weight:bold;
+    font-size:2.1em;font-weight:bold;
     text-transform:uppercase;
     color:var(--b-color);line-height:1.4;
 }
- .cate0tt{
-     font-size:1.6em;color:#000;font-weight:bold;text-transform:uppercase;line-height:1.4;white-space:nowrap;
- }
+h2.h3-ttnews{
+    font-size:1.6em;
+}
+@media (min-width:768px) {
+    h2.h3-ttnews {
+        font-size: 2.6em;
+    }
+}
+.cate0tt {
+    font-size: 1.6em;
+    color: #000;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.4;
+    white-space: nowrap;
+}
 .text-black
 {
     color:#333
@@ -1943,8 +1956,13 @@ iframe[seamless="seamless"]:not(.lwc-chat-frame){display: none;}
 #banner {
   position:relative;background:#fff;
     border:1px solid #ddd;
-    padding:15px;border-radius:10px;
-    
+   border-radius:10px;
+    padding:5px;
+}
+@media (min-width:768px) {
+    #banner {
+        padding: 15px;
+    }
 }
 .fff-ban{
     position:fixed;
@@ -1959,7 +1977,6 @@ iframe[seamless="seamless"]:not(.lwc-chat-frame){display: none;}
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 40px;
-    margin-top: 0;
     position: relative;
 }
     .d-split::before, .d-split::after {
