--- a/Content/Site.css
+++ b/Content/Site.css
@@ -265,9 +265,9 @@ a:hover{
 }
 .h3-ttnews {
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     position:relative;display:inline-block;
-    font-size:2.1em;font-weight:bold;
+    font-size:1.7em;font-weight:bold;
     text-transform:uppercase;
     color:var(--b-color);line-height:1.4;
 }
@@ -281,7 +281,7 @@ h2.h3-ttnews{
 }
 .cate0tt {
     font-size: 1.6em;
-    color: #000;
+    color: var(--b-color);
     font-weight: bold;
     text-transform: uppercase;
     line-height: 1.4;
@@ -393,7 +393,7 @@ ul.box-lst-child li a:hover{
     font-size:1.6em;color:var(--b-color);line-height:1.4;overflow-y:hidden;display:block;font-weight:bold;
 }
 .news-detail{
-    font-size:16px!important;line-height:1.7;
+    font-size:14px!important;line-height:1.7;
 }
 .news-detail.news-detail-15{font-size:15px;}
 .news-detail img{max-width:100%;height:auto!important;}
